Did some initial tests with posting and routing

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 
-@main("Startsida") {
+@main("Startpage") {
 
     @message
-
+    <a href="@routes.UserController.index()">Go to users</a>
 }
