--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,7 +14,8 @@
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
     </head>
     <body>
-        @shared.img("images/logo.jpg", 170, 255, "Home dining club logo")
+        <a href="@routes.Application.index()">@shared.img("images/logo.jpg", 170, 255, "Home dining club logo")</a>
+        <hr>
         @content
     </body>
 </html>
