--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,8 +14,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
     </head>
     <body>
-        <a href="@routes.Application.index()">@shared.img("images/logo.jpg", 170, 255, "Home dining club logo")</a>
-        <hr>
+        @header.header()
         @content
     </body>
 </html>
