Polishing and also started to create a production config

--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -1,1 +1,1 @@
-<a href="@routes.Application.index()">@shared.img("images/logo.jpg", 170, 255, "Home dining club logo")</a>
+<a href="@routes.Campaign.index()">@shared.img("images/logo.jpg", 170, 255, "Home dining club logo")</a>
