Experiment med Noe4J utan att komma någonstans. Lagt till label på fält.

--- a/app/views/person/skapa.scala.html
+++ b/app/views/person/skapa.scala.html
@@ -3,7 +3,7 @@
 @import helper.twitterBootstrap._
 
     <h1>@Messages("person.formular")</h1>
-
+    <i>Ett enkelt formulär</i>
 
 @helper.form(action = routes.Personer.save()) {
     <fieldset>
