--- a/app/views/campaign/index.scala.html
+++ b/app/views/campaign/index.scala.html
@@ -1,4 +1,6 @@
 
 @main(Messages("campaign.title")) {
+    <h1>@Messages("campaign.header")</h1>
+    <div>@Messages("campaign.preamble")</div>
     @campaign.newsletterform()
 }
