--- a/app/views/campaign/newsletterform.scala.html
+++ b/app/views/campaign/newsletterform.scala.html
@@ -1,9 +1,12 @@
 
 <div id="mc_embed_signup">
     <form action="http://homediningclub.us8.list-manage.com/subscribe/post?u=0267fbf83c32c7d4cd7624514&amp;id=c36f952e8d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="novalidate">
-        <label for="mce-EMAIL">@Messages("campaign.newsletterform.title")</label>
-        <div>@Messages("campaign.newsletterform.text")</div>
-        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+        <label for="mce-EMAIL">@Messages("campaign.newsletterform.emaillabel")</label>
+        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="@Messages("campaign.newsletterform.emailplaceholder")" required="required">
+        <label for="mce-FNAME">@Messages("campaign.newsletterform.firstnamelabel")</label>
+        <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+        <label for="mce-LNAME">@Messages("campaign.newsletterform.surnamelabel")</label>
+        <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
         <div style="position: absolute; left: -5000px;"><input type="text" name="b_0267fbf83c32c7d4cd7624514_c36f952e8d" value=""></div>
         <div class="clear"><input type="submit" value="@Messages("campaign.newsletterform.button.send")" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </form>
