--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -1,1 +1,3 @@
-<a href="@routes.Campaign.index()">@shared.img("images/logo.jpg", 170, 255, "Home dining club logo")</a>
+<header>
+    <a href="@routes.Campaign.index()">@shared.img("images/logo.jpg", 170, 255, "Home dining club logo")</a>
+</header>
