--- a/app/views/campaign/index.scala.html
+++ b/app/views/campaign/index.scala.html
@@ -1,6 +1,9 @@
-
 @main(Messages("campaign.title")) {
-    <h1>@Messages("campaign.header")</h1>
-    <div>@Messages("campaign.preamble")</div>
-    @campaign.newsletterform()
+    <div class="row">
+        <div class="col-md-offset-3 col-md-6">
+            <h1>@Messages("campaign.header")</h1>
+            <div>@Messages("campaign.preamble")</div>
+            @campaign.newsletterform()
+        </div>
+    </div>
 }
