--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -2,18 +2,25 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="@Messages("main.language")">
     <head>
         <title>@title - @Messages("main.title")</title>
-        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap/bootstrap.min.css")" />
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" />
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        @* TODO:Create controllers with local backups *@
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
     </head>
     <body>
         @header.header()
-        @content
+        <div class="container">@content</div>
+        @footer.footer()
+
+        @* TODO:Create controllers with local backups *@
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
     </body>
 </html>
