--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,7 +18,7 @@
         <div class="container">@content</div>
         @footer.footer()
 
-        @* TODO:Create controllers with local backups *@
+        @*TODO - Create controllers with local backups *@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
