--- a/app/views/profile/updateUserProfile.scala.html
+++ b/app/views/profile/updateUserProfile.scala.html
@@ -1,5 +1,8 @@
 @(UserProfileForm: Form[models.formdata.UserProfile])
 
+<h1>Ändra användarprofil</h1>
+@import models.formdata.UserProfile
+
 @helper.form(action = routes.UserProfileController.saveUserProfile()) {
 
     @if(UserProfileForm.hasGlobalErrors) {
@@ -17,13 +20,35 @@
         '_help -> "Användarnamn får inte vara tomt"
     )
 
+    @helper.inputText(UserProfileForm("firstName"),
+        'id -> "firstname",
+        '_showErrors -> true,
+        '_label -> "Förnamn",
+        '_help -> "Förnamn"
+    )
+
+    @helper.inputText(UserProfileForm("lastName"),
+        'id -> "lastname",
+        '_showErrors -> true,
+        '_label -> "Efternammn",
+        '_help -> "Efternamn"
+    )
+
+
+
     @helper.inputText(UserProfileForm("idno"),
         'id -> "idno",
         '_showErrors -> true,
         '_label -> "idno",
-        '_help -> "idno"
+        '_help -> "Hidden value, visas endast under utveckling"
     )
 
+    @helper.inputText(UserProfileForm("aboutme"),
+        'id -> "aboutme",
+        '_showErrors -> true,
+        '_label -> "Beskrivning",
+        '_help -> "Beskrivning"
+    )
 
 
     @helper.inputText(UserProfileForm("emailAddress"),
