--- a/app/views/footer/footer.scala.html
+++ b/app/views/footer/footer.scala.html
@@ -1,1 +1,9 @@
-<footer></footer>
+<footer>
+    <div class="container header-container">
+        <div class="row">
+            <div class="col-md-12">
+                Here be footer
+            </div>
+        </div>
+    </div>
+</footer>
