--- a/app/views/campaign/index.scala.html
+++ b/app/views/campaign/index.scala.html
@@ -1,9 +1,13 @@
-@main(Messages("campaign.title")) {
-    <div class="row">
-        <div class="col-md-offset-3 col-md-6">
-            <h1>@Messages("campaign.header")</h1>
-            <div>@Messages("campaign.preamble")</div>
-            @campaign.newsletterform()
+
+@main(Messages("campaign.title"), false, false) {
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-offset-3 col-md-6 col-xs-offset-1 col-xs-10">
+                <h1>@Messages("campaign.header")</h1>
+                <div>@Messages("campaign.preamble")</div>
+                @campaign.newsletterform()
+            </div>
         </div>
     </div>
 }
