--- a/app/views/campaign/index.scala.html
+++ b/app/views/campaign/index.scala.html
@@ -1,5 +1,5 @@
 
-@main(Messages("campaign.title"), false, false) {
+@main(Messages("campaign.title"), headerVisible = false, footerVisible = false) {
 
     <div class="container">
         <div class="row">
