--- a/app/views/file/uploadform.scala.html
+++ b/app/views/file/uploadform.scala.html
@@ -1,5 +1,5 @@
 
-@helper.form(action = routes.FileController.add, 'enctype -> "multipart/form-data") {
+@helper.form(action = routes.FileController.add(), 'enctype -> "multipart/form-data") {
     <input type="file" name="file">
     <input type="submit" value="@Messages("file.button.upload")">
 }
