--- a/app/views/footer/footer.scala.html
+++ b/app/views/footer/footer.scala.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="container header-container">
+    <div class="container footer-container">
         <div class="row">
             <div class="col-md-12">
                 Here be footer
