--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -2,9 +2,11 @@
 
 @main(Messages("startpage.title")) {
 
-    <div class="container maincontent-container">
+    <div class="container-fluid maincontent-container">
         <div class="row">
-            @shared.img("images/startpage/startpage-main-image.jpg", None, None, "")
+            <div class="col-xs-12">
+                @shared.img("images/startpage/startpage-main-image.jpg", None, None, "")
+            </div>
         </div>
     </div>
 
