--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -1,15 +1,28 @@
 <header>
-    <div class="container header-container">
+    <div class="container-fluid header-container">
         <div class="row">
-            <div class="col-md-3">
-                <a href="@routes.StartPageController.index()">@shared.img("/images/general/logo.jpg", Some(170), Some(255), Messages("header.logo.alt"))</a>
-            </div>
-            <div class="col-md-7 pull-right">
-                <ul>
-                    <li><a href="@routes.CampaignController.index()">@Messages("header.link.campaign")</a></li>
-                    <li><a href="@routes.AboutUsController.index()">@Messages("header.link.aboutus")</a></li>
-                </ul>
+            <div class="col-md-12">
+
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="row">
+                                <div class="col-md-3 col-lg-offset-1">
+                                    <a href="@routes.StartPageController.index()">@shared.img("/images/general/logo-horisontal.png", Some(239), Some(93), Messages("header.logo.alt"))</a>
+                                </div>
+                                <div class="col-md-6 pull-right">
+                                    <nav>
+                                        <ul>
+                                            <li><a href="@routes.CampaignController.index()">@Messages("header.link.campaign")</a></li>
+                                            <li><a href="@routes.AboutUsController.index()">@Messages("header.link.aboutus")</a></li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
             </div>
         </div>
     </div>
+    <div class="header-spacer"><!-- --></div>
 </header>
