--- a/app/views/file/index.scala.html
+++ b/app/views/file/index.scala.html
@@ -4,15 +4,15 @@
 @main(Messages("file.title")) {
     <div class="row">
         <div class="col-md-offset-3 col-md-6">
-            <h1>@Messages("file.header")</h1>
-            <div>@Messages("file.preamble")</div>
+            <h1>@Messages("file.upload.header")</h1>
             @file.uploadform()
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-offset-3 col-md-6">
-        <h2>@Messages("file.filelistheader")</h2>
+        <h2>@Messages("file.filelist.header")</h2>
+
             <a href="@routes.FileController.listAllFiles">List all files</a><br>
             @for(file <- fileList) {
                 <li><a href="#">@file</a></li>
