--- a/app/views/file/uploadform.scala.html
+++ b/app/views/file/uploadform.scala.html
@@ -1,3 +1,4 @@
+@(uploadResult: Option[String] = None)
 
 @helper.form(action = routes.FileController.add(), 'enctype -> "multipart/form-data") {
     <input type="file" name="file">
