--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -83,7 +83,7 @@ input[type="reset"]
   overflow:visible;
   display:block;
   width:100%;
-  height:111px;
+  height:151px;
   background-image: url("/assets/images/general/bg-header.png");
   background-repeat: repeat-x;
   box-shadow: 0 0 10px 0px #aaa;
@@ -91,7 +91,15 @@ input[type="reset"]
 }
 .header-spacer
 {
-  height:131px;
+  height:151px;
+}
+.header-logo
+{
+  height:111px;
+}
+.header-navigation
+{
+  background: #CCC;
 }
 
 // Footer
