--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -1,26 +1,34 @@
+@(menuItems: Seq[(String, String, Call, String)])
 <header>
     <div class="container-fluid header-container">
-        <div class="row">
+        <div class="row header-logo">
             <div class="col-md-12">
-
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="row">
-                                <div class="col-md-3 col-lg-offset-1">
-                                    <a href="@routes.StartPageController.index()">@shared.img("/images/general/logo-horisontal.png", Some(239), Some(93), Messages("header.logo.alt"))</a>
-                                </div>
-                                <div class="col-md-6 pull-right">
-                                    <nav>
-                                        <ul>
-                                            <li><a href="@routes.CampaignController.index()">@Messages("header.link.campaign")</a></li>
-                                            <li><a href="@routes.AboutUsController.index()">@Messages("header.link.aboutus")</a></li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-                        </div>
+                <div class="row">
+                    <div class="col-xs-2 col-lg-offset-1">
+                        <a href="@routes.StartPageController.index()">@shared.img("/images/general/logo-horisontal.png", Some(239), Some(93), Messages("header.logo.alt"))</a>
                     </div>
-
+                </div>
+            </div>
+        </div>
+        <div class="row header-navigation">
+            <div class="col-md-12">
+                <nav>
+                    <ul class="nav nav-pills">
+@*
+                        @menuItems.map {
+                            case (key, title, url) if key == section => {
+                                <li class="active">@title</li>
+                            }
+                            case (key, title, url) => {
+                                <li><a href="@url">@title</a></li>
+                            }
+                        }
+*@
+                        @for(nav <- menuItems) {
+                            <li><a class="@nav._4" href="@nav._3" title="@nav._2">@nav._1</a></li>
+                        }
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
