--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -79,27 +79,23 @@ input[type="reset"]
 // Header
 .header-container
 {
-  position:fixed;
-  overflow:visible;
-  display:block;
-  width:100%;
-  height:151px;
   background-image: url("/assets/images/general/bg-header.png");
   background-repeat: repeat-x;
   box-shadow: 0 0 10px 0px #aaa;
   background-color: @header-background-color;
-}
-.header-spacer
-{
-  height:151px;
-}
-.header-logo
-{
   height:111px;
 }
+
+// Main navigation
 .header-navigation
 {
-  background: #CCC;
+  max-height: 37px;
+  background-image: url("/assets/images/general/bg-menu-gray-transparent.png");
+  background-repeat: repeat-x;
+}
+.nav-pills
+{
+  height:37px;
 }
 
 // Footer
