--- a/app/views/aboutus/index.scala.html
+++ b/app/views/aboutus/index.scala.html
@@ -1,8 +1,8 @@
 
 @main(Messages("aboutus.title")) {
 
-    <div class="container maincontent-container">
-        <div class="row">
+    <div class="container-fluid maincontent-container">
+        <div class="row-fluid">
             <h1>@Messages("aboutus.header")</h1>
         </div>
     </div>
