--- a/app/views/campaign/index.scala.html
+++ b/app/views/campaign/index.scala.html
@@ -1,8 +1,8 @@
 
 @main(Messages("campaign.title"), headerVisible = false, footerVisible = false) {
 
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row-fluid">
             <div class="col-md-offset-3 col-md-6 col-xs-offset-1 col-xs-10">
                 <h1>@Messages("campaign.header")</h1>
                 <div>@Messages("campaign.preamble")</div>
