--- a/app/views/file/index.scala.html
+++ b/app/views/file/index.scala.html
@@ -1,22 +1,23 @@
 @(fileList: Option[List[String]] = None, nameOfConfig: String = null)
 
-
 @main(Messages("file.title")) {
-    <div class="row">
-        <div class="col-md-offset-3 col-md-6">
-            <h1>@Messages("file.upload.header")</h1>
-            @file.uploadform()
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="col-md-offset-3 col-md-6">
+                <h1>@Messages("file.upload.header")</h1>
+                @file.uploadform()
+            </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-offset-3 col-md-6">
-        <h2>@Messages("file.filelist.header")</h2>
+        <div class="row-fluid">
+            <div class="col-md-offset-3 col-md-6">
+            <h2>@Messages("file.filelist.header")</h2>
 
-            <a href="@routes.FileController.listAllFiles">List all files</a><br>
-            @for(file <- fileList) {
-                <li><a href="#">@file</a></li>
-            }
+                <a href="@routes.FileController.listAllFiles">List all files</a><br>
+                @for(file <- fileList) {
+                    <li><a href="#">@file</a></li>
+                }
+            </div>
         </div>
     </div>
 }
