--- a/app/views/footer/footer.scala.html
+++ b/app/views/footer/footer.scala.html
@@ -1,6 +1,6 @@
 <footer>
-    <div class="container footer-container">
-        <div class="row">
+    <div class="container-fluid footer-container">
+        <div class="row-fluid">
             <div class="col-md-12">
                 Here be footer
             </div>
