Small fixes for deploy

--- a/app/views/shared/img.scala.html
+++ b/app/views/shared/img.scala.html
@@ -1,5 +1,4 @@
 @(path: String, width: Option[Int], height: Option[Int], alt: String = "", title: String = "", cssClass: String = "")
 @import play.api.Play.resource
 @import play.api.Play.current
-
-@if(resource("public/" + path).isDefined) {<img src="@routes.Assets.at(path)" class="@cssClass" border="0" @{if(width.isDefined){ "width=\"@width\"" }} @{if(height.isDefined){ "height=\"@height\"" }} alt="@alt" title="@title">}
+<img src="@routes.Assets.at(path)" class="@cssClass" border="0" @{if(width.isDefined){ "width=\"@width\"" }} @{if(height.isDefined){ "height=\"@height\"" }} alt="@alt" title="@title">
