--- a/app/views/shared/img.scala.html
+++ b/app/views/shared/img.scala.html
@@ -2,4 +2,4 @@
 @import play.api.Play.resource
 @import play.api.Play.current
 
-@if(resource("public/" + path).isDefined) {<img src="@routes.Assets.at(path)" class="@cssClass" border="0" @{if(width.isDefined){ "width=\"@width\"" }} @{if(height.isDefined){ "height=\"@height\"" }} alt="@alt" title="@title">}
+@if(resource("public/" + path.stripPrefix("/")).isDefined) {<img src="@routes.Assets.at(path.stripPrefix("/"))" class="@cssClass" border="0" @{if(width.isDefined){ "width=\"@width\"" }} @{if(height.isDefined){ "height=\"@height\"" }} alt="@alt" title="@title">}
