--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -6,14 +6,24 @@
                 <div class="col-xs-5 col-md-offset-2 col-xs-offset-0 logo">
                     <a href="@routes.StartPageController.index()">@shared.img("images/general/logo-horizontal.png", Some(239), Some(93), Messages("header.logo.alt"))</a>
                 </div>
-                <div class="col-xs-3 pull-right visible-xs">
-                    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-                        <span class="visible-xs">Toggle navigation</span>
+                <div class="pull-right visible-xs">
+                    <div class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+                        <span class="hidden">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>
+                    </div>
+                </div>
+
+                <div class="pull-right">
+                    <div class="btn-group">
+                            <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                <!-- Login form here -->
+                                here be login
+                            </div>
+                    </div>
                 </div>
             </div>
             <nav>
