--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -64,10 +64,46 @@
             <div class="row-fluid">
                 <div class="col-xs-12 col-md-8 col-md-offset-2 col-xs-offset-0">
                     <div class="row">
-                        <div class="col-md-8 col-xs-12">
-                            <h2>Hetaste diners!</h2>
+                        <div class="col-xs-12 col-md-9">
+
+                                <div class="col-md-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
+                                    <div class="body">
+                                        @shared.img("images/startpage/host-head-default.jpg", None, None, cssClass="img-circle host-image")
+                                        <h2>Host name</h2>
+                                        <hr>
+                                        <p class="location">Location</p>
+                                        <a href="#" class="btn-primary">Go to profile</a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box2.png")')">
+                                    <div class="body">
+                                        @shared.img("images/startpage/host-head-default.jpg", None, None, cssClass="img-circle host-image")
+                                        <h2>Host name</h2>
+                                        <hr>
+                                        <p class="location">Location</p>
+                                        <a href="#" class="btn-primary">Go to profile</a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box3.png")')">
+                                    <div class="body">
+                                        @shared.img("images/startpage/host-head-default.jpg", None, None, cssClass="img-circle host-image")
+                                        <h2>Host name</h2>
+                                        <hr>
+                                        <p class="location">Location</p>
+                                        <a href="#" class="btn-primary">Go to profile</a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
+                                    <div class="body">
+                                        @shared.img("images/startpage/host-head-default.jpg", None, None, cssClass="img-circle host-image")
+                                        <h2>Host name</h2>
+                                        <hr>
+                                        <p class="location">Location</p>
+                                        <a href="#" class="btn-primary">Go to profile</a>
+                                    </div>
+                                </div>
                         </div>
-                        <div class="col-md-4 col-xs-12">
+                        <div class="col-xs-12 col-md-3">
                             <h2>Funktioner</h2>
                         </div>
                     </div>
